updating Config properties file
updating Config properties file

--- a/AntExample/build.properties
+++ b/AntExample/build.properties
@@ -1,5 +1,5 @@
-flex.path = /Apache 
-flex.sdkVersion=AIR 17
+flex.path = D:\avon\workspace\sdk
+flex.sdkVersion=AIR 16.0 SDK
 flex.sdkPath= ${flex.path}/${flex.sdkVersion}
 FLEX_HOME= ${flex.sdkPath}
 contentText = [This value will be overwritten by Flash Builder in the output app.xml]
